    * Check for clean URL support automatically with JavaScript.
    * Removed default/settings.php. Instead the installer will create it from default.settings.php.
    * Made it possible to configure your own date formats.
    * Remember anonymous comment posters.
    * Only allow modules and themes to be enabled that have explicitly been ported to the right core API version.
- Theme system:
    * Added .info files to themes and made it easier to specify regions and features.
    * Added theme registry: modules can directly provide .tpl.php files for their themes without having to create theme_ functions.
    * Used the Garland theme for the installation and maintenance pages.
    * Added theme preprocess functions for themes that are templates.
- Refactored update.php to a generic batch API to be able to run time consuming operations in multiple subsequent HTTP requests.
- Installer:
    * Themed the installer with the Garland theme.
    * Added form to provide initial site information during installation.
    * Added ability to provide extra installation steps programmatically.
    * Made it possible to import interface translations at install time.
- Added the HTML corrector filter:
    * Fixes faulty and chopped off HTML in postings.
    * Tags are now automatically closed at the end of the teaser.
- Performance:
    * Made it easier to conditionally load include files.
    * Added a JavaScript aggregator and compressor.
- File handling improvements:
    * Entries in the files table are now keyed to a user, and not a node.
    * Added re-usable validation functions to check for uploaded file sizes, extensions, and image resolution.

Drupal 5.0, 2007-01-15
----------------------
- Completely retooled the administration page
    * /Admin now contains an administration page which may be themed
    * Reorganised administration menu items by task and by module
    * Added a status report page with detailed PHP/MySQL/Drupal information